--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./server
       dockerfile: .dockerfile
-    container_name: server
+    container_name: tanksai-server-${NUM}
     volumes:
       - sqlite_data:/app/data
     ports:
@@ -18,7 +18,7 @@ services:
     build:
       context: ./game
       dockerfile: .dockerfile
-    container_name: game
+    container_name: tanksai-game-${NUM}
     volumes:
       - sqlite_data:/app/data
     restart: always
